--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ layout: compress
         </div>
     </div>
     <!-- /container -->
+    <embed src="地址" autostart="true" loop="true" width="bai" height="du" >
 </div>
 <!-- JS -->
 <script src="js/vendors/trianglify.min.js"></script>
